created MockJavaHttpGateway for quicker, deterministic testing as per https://github.com/Sujoy-D/snack-overflow/pull/52#pullrequestreview-3531047859